# rag-code-assistant

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  main.py  pyproject.toml  run_context_fidelity.py  run_eval.py  run_gaia.py  s_full.py  settings.json  settings.json.example  verify_m10.py  verify_m8.py  verify_m9.py
docs/: context-engine-textbook.md  learning-guide.md  memory-engine-textbook.md
docs/interview/: agent-harness-questions.md
examples/hooks-demo/: audit_log.py  audit_write.py  check_completion.py  check_dangerous.py  hooks.json  inject_context.py
scripts/: run_bfcl.py
skills/code-explainer/: SKILL.md
src/: __init__.py
src/agent/: filter_tools.py  hooks.py  intent.py  loop.py
src/bus/: mcp_client.py  message_bus.py  scratchpad.py
src/compression/: auto.py  collapse.py  micro.py
src/config/: loader.py
src/context/: __init__.py  detector.py  orchestrator.py  prompt_builder.py  types.py
src/context/budget/: __init__.py  manager.py
src/context/compression/: __init__.py  circuit_breaker.py  (+4 more)
src/eval/: __init__.py  bfcl_loader.py  context_fidelity.py  gaia_loader.py  runner.py  test_cases.py
src/memory/: __init__.py  collector.py  events.py  identity.py  index.py  layer.py  metadata.py  pipeline.py  policy.py  registry.py  schema.py  store.py  tools.py  types.py
src/rag/: __init__.py  chunker.py  embedder.py  indexer.py  retriever.py
src/recovery/: error_handler.py  session.py
src/skills/: loader.py
src/state/: store.py
src/tasks/: task_manager.py  todo.py
src/tools/: base.py  registry.py
tests/: test_hooks.py  test_rag.py
(+89 files in other folders)
