[project]
name = "s-full"
version = "2.0.0"
description = "A pedagogical Agent framework implementing Claude Code's core architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
s-full = "s_full:main"

[tool.setuptools.packages.find]
include = ["src*"]
