[project]
name = "agent-core"
version = "2.0.0"
description = "逐模块实现 Claude Code 核心架构的教学级 Agent 框架"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
s-full = "s_full:main"

[tool.setuptools.packages.find]
include = ["src*"]
